# cmake_tutorial1

./: .gitignore  CMakeLists.txt
demo1/: CMakeLists.txt  main.cpp  readme.md  server_1.cpp  server_1_client.cpp  test.cpp
demo10/: CMakeLists.txt  demo10.cpp  demo10.h
demo11/: CMakeLists.txt  demo11.cpp  demo11Config.h.in
demo12/: CMakeLists.txt  demo12.cpp
demo12/CommonFun/: CMakeLists.txt  CommonFun.cpp  CommonFun.h
demo12/SpecifiedFun/: CMakeLists.txt  SpecifiedFun.cpp  SpecifiedFun.h
demo2/: CMakeLists.txt
demo3/: CMakeLists.txt  demo3_h.h  demo3_main.cpp  demo_3.cpp
demo4/: CMakeLists.txt  demo4_main.cpp
demo4/demo4_inc/: demo4_h.h  demo_4.cpp
demo5/: CMakeLists.txt  demo5_h.h  demo_5.cpp
demo6/: CMakeLists.txt  demo6_main.cpp
demo7/: CMakeLists.txt  demo7_1.cpp  demo7_1.h  demo7_2.cpp  demo7_2.h
demo8/: CMakeLists.txt  demo8.cpp  demo8.h
demo9/: CMakeLists.txt  demo9.cpp  demo9.h  demo9_main.cpp
demo9/cmake/: FindDEMO9LIB.cmake
demo_boost_asio/: CMakeLists.txt  chat_client.cpp  chat_message.h  chat_server.cpp
demo_hard1/: CMakeLists.txt  test_hard1.cpp  test_hard1.h  test_public.h.in
demo_hard1/cmake/: config.h.in
demo_knn/: CMakeLists.txt  features.txt  knn_kdtree_demo.cpp  labels.txt
demo_local_boost/: CMakeLists.txt  use_boost.cpp
demo_protobuf/: CMakeLists.txt  main.cpp
demo_protobuf/proto/: CMakeLists.txt  message.proto
proto_lib/: CMakeLists.txt  proto_lib_demo.cpp
proto_lib/my_proto/: CMakeLists.txt  common.proto  meta.proto
s2s_example/: CMakeLists.txt  FindLibevent.cmake  demo.cpp  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  demo5.cpp  demo6.cpp  demo7.cpp  demo8.cpp  s2sClientIf.h  s2s_name_key.txt
s2s_example/read_me/: Demo说明.txt  Makefile
thrift_example/: CMakeLists.txt  search_id.thrift  thrift_client.cpp  thrift_server.cpp
thrift_example/gen-cpp/: Search.cpp  Search.h  Search_server.skeleton.cpp  search_id_constants.cpp  search_id_constants.h  search_id_types.cpp  search_id_types.h
